Closed Bug 88410 Opened 23 years ago Closed 23 years ago

multiple periods in folder name throws calculation error message

Categories

(SeaMonkey :: Installer, defect)

x86
Windows 98
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: ckritzer, Assigned: ssu0262)

References

Details

Attachments

(1 file)

Overview:  When using the format of 2001-06-29-06-0.9.2 to name the folder of 
the build I'm installing on Windows98 (Second Edition), I get a HD space 
calculation error message/dialog.

Steps to Reproduce:
1) Download latest installer (NS6Setup.exe)
2) Launch installer
3) Click "Next" button at Welcome screen
4) Click "Accept" button at Software License screen
5) At Setup Type screen, click "Browse" button
6) In the "Directories" field of the "Select a directory" dialog, type:
   c:\test.test.test
then click the "Yes" button at the "Create Directory?" dialog.  This should put 
you back at the Setup Type screen, where you click the "Next" button.

Actual Results:  An error dialog pops up with the following contents:

123: Could not determine available disk space for:
c:\test.test.test\

Expected Results:  Continuation to the Download Options screen (with no error 
messages/dialogs)

Platforms/Builds tested:
2001-06-29-06-0.9.2 commercial installer

Additional Information:  Eventually (after 12-15x of the error dialog popping 
up) you will get to the next set of screens, and you *can* install (and launch) 
the product successfully, but there are many many many occurances of this error 
dialog along the way.
*** Bug 88336 has been marked as a duplicate of this bug. ***
adding syd to the cc list.
Status: NEW → ASSIGNED
Encountered in 2001-06-07-03.  Complaint "Unable to determine . . ." re-appears
about 12 times but the install apparently completed OK.  Drive has 314Meg
available AFTER the installation.
This is not happening on my build 20010629 on Win2k.
Must be win98 only.

I entered "c:\test.test.test" and it was ok...
URL: n/a
Build 2001-06-28-15 (Release 0.9.2) on Win98se
This has regressed since my comment of 06/29: Before it did complete the install
dispite the complaints; now it says "Disk space required ???M, Disk space
available: 0"

1) Run Windows32-Installer,
2) Select a NON-STANDARD PATH 
[ I used C:\WinApps\_M_\org.Mozilla\releases\mozilla0.9.2 ]

Installer complains about 12 times that it cannot determine the available disk
space, then it reports zero space available and refuses to install.

I tried this both with the full path not previously created, then I created the
full path and tried again.  Both times same result.  It looks as though the use
of a non-standard path is the key, rather than the presence of periods.
*** Bug 91502 has been marked as a duplicate of this bug. ***
"------- Additional Comments From Henrik Gemal 2001-06-30 02:41 -------

This is not happening on my build 20010629 on Win2k.
Must be win98 only.

I entered "c:\test.test.test" and it was ok..."

Henrik, my installation was on my d:\ drive (does not contain any bootable 
OS's), under "d:\test.test.test".  If you have a second drive, try that and see 
what results you get...
Attached patch patch #1Splinter Review
r=dveditz for patch #1
*** Bug 72742 has been marked as a duplicate of this bug. ***
sr=mscott
*** Bug 93386 has been marked as a duplicate of this bug. ***
patch checked in!
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
verified duplicate
verified on build 2001082406
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: