fixing bug 88410 - multiple periods in folder name throws calculation error message.  r=dveditz, sr=mscott.  affects only windows platforms.